k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bible-reader
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
